--- a/index.html
+++ b/index.html
@@ -2,72 +2,54 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LINKまとめ</title>
+  <title>Document</title>
   <link rel="icon" href="img/IMG_2848.JPG">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/stylesheet.css">
 </head>
-
 <body>
   <header>
-    <a href="index.html">
-      <h1>
-        片っ端からLINKまとめてみた
-      </h1>
-    </a>
+    <div class="container">
+      <a href="index.html">
+        <h1>片っ端からLINKまとめてみた</h1>
+      </a>
+    </div>
   </header>
-
-  <main>
-    <ul>
-      <li>
-        <a href="https://twitter.com/_tanasinn4545">
-          <i class="bi bi-twitter"></i>
-          Twitter
-        </a>
-      </li>
-      <li>
-        <a href="https://www.instagram.com/zainitinihonjin/">
-          <i class="bi bi-instagram"></i>
-          Instagram
-        </a>
-      </li>
-      <li>
-        <a href="https://www.youtube.com/channel/UCE-AIi6b0Dks6lXw9MzEksg">
-          <i class="bi bi-youtube"></i>
-          YouTube
-        </a>
-      </li>
-      <li>
-        <a href="https://www.twitch.tv/zainiti_nihonjin">
-          <i class="bi bi-twitch"></i>
-          Twitch
-        </a>
-      </li>
-      <li>
-        <a href="https://www.tiktok.com/@zainiti_nihonjin">
-          <i class="bi bi-tiktok"></i>
-          TikTok
-        </a>
-      </li>
-      <li>
-        <a href="https://discord.gg/uqGSU2Mj">
-          <i class="bi bi-discord"></i>
-          Discord
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <i class="bi bi-cart3"></i>
-          ...coming soon
-        </a>
-      </li>
-    </ul>
-</main>
-
-<footer>
-  <small>(c)よねちゃ</small>
-</footer>
+  <section class="hero">
+    <a href="https://twitter.com/_tanasinn4545" class="link1">
+      <i class="bi bi-twitter"></i>
+      Twitter
+    </a>
+    <a href="https://www.instagram.com/zainitinihonjin/" class="link2">
+      <i class="bi bi-instagram"></i>
+      Instagram
+    </a>
+    <a href="https://www.youtube.com/channel/UCE-AIi6b0Dks6lXw9MzEksg" class="link3">
+      <i class="bi bi-youtube"></i>
+      YouTube
+    </a>
+    <a href="https://www.twitch.tv/zainiti_nihonjin" class="link4">
+      <i class="bi bi-twitch"></i>
+      Twitch
+    </a>
+    <a href="https://www.tiktok.com/@zainiti_nihonjin" class="link5">
+      <i class="bi bi-tiktok"></i>
+      TikTok
+    </a>
+    <a href="https://discord.gg/uqGSU2Mj" class="link6">
+      <i class="bi bi-discord"></i>
+      Discord
+    </a>
+    <a href="#" class="link7">
+      <i class="bi bi-cart3"></i>
+      ...coming soon
+    </a>
+  </section>
+  <footer>
+    <small>(c)よねちゃ</small>
+  </footer>
 </body>
 </html>
